Content updates for interested parties can comment on an appeal

--- a/app/views/interested-party/v1/appeal-comment-email.html
+++ b/app/views/interested-party/v1/appeal-comment-email.html
@@ -45,12 +45,12 @@
           </label>
 
           <p class="govuk-body">
-            We will use your email address to update you about the appeal.
+            We will contact you if we need to discuss your comments.
           </p>
 
           <div class="govuk-form-group">
 
-            <input class="govuk-input" id="full-name" name="full-name" type="text" spellcheck="false" autocomplete="name"></div>
+            <input class="govuk-input" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="{{ data['email'] }}"></div>
 
           </div>
 
