--- a/app/views/interested-party/v1/appeal-comment-name.html
+++ b/app/views/interested-party/v1/appeal-comment-name.html
@@ -50,7 +50,7 @@
 
           <div class="govuk-form-group">
 
-            <input class="govuk-input" id="full-name" name="full-name" type="text" spellcheck="false" autocomplete="name"></div>
+            <input class="govuk-input" id="full-name" name="full-name" type="text" spellcheck="false" autocomplete="name" value="{{ data['full-name'] }}"></div>
 
           </div>
 
