--- a/app/views/interested-party/v1/comment-received.html
+++ b/app/views/interested-party/v1/comment-received.html
@@ -43,10 +43,19 @@
       <h2 class="govuk-heading-m">What happens next</h2>
 
       <p class="govuk-body">
-        Your comment will be included in the planning review.
+        Your comments will be shared with the appellant and Local Planning Department.
       </p>
+
       <p class="govuk-body">
-        When a decision is made you will be notified by email.
+        An inspector will review them when determining the appeal.
+      </p>
+
+      <!-- <p class="govuk-body">
+        We will contact you again when a decision is made.
+      </p> -->
+
+      <p class="govuk-body">
+        A decision is expected by 27 May 2022.
       </p>
 
     </section>
