--- a/app/views/interested-party/v1/guidance.html
+++ b/app/views/interested-party/v1/guidance.html
@@ -35,16 +35,45 @@
       </h1>
 
       <p class="govuk-body">
-        Use this service to comment on an appeal.
+        You can use this service to comment on an appeal.
+      </p>
+
+      <!-- <p class="govuk-body">
+        The deadline for comments is 5 weeks after the start date of the appeal, or 6 weeks after the date on the local planning departments enforcement notice.
+      </p> -->
+
+      <!-- <p class="govuk-body">
+        The deadline for comments is 5 weeks after the start date of the appeal.
+      </p> -->
+
+      <p class="govuk-body">
+        The deadline for comments is 11.59pm 4 May 2022.
+      </p>
+
+      <!-- <p class="govuk-body">
+        Your local planning department must tell anyone who has commented on the original application (‘interested parties’) that there is an appeal.
       </p>
 
       <p class="govuk-body">
-        To use this service you will need:
+        They have to do this within 5 working days of the appeal being started by the Planning Inspectorate.
+      </p> -->
+
+      <p class="govuk-body">
+        You can read <a href="https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal" class="govuk-link govuk-link--no-visited-state">the detailed guidance about taking part in an appeal</a>.
+      </p>
+
+      <h2 class="govuk-heading-m">
+        Before you start
+      </h2>
+
+      <p class="govuk-body">
+        You will need:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>the appeal reference number</li>
-        <li>an email address so that we can update you about the appeal</li>
+        <!-- <li>the appeal reference number</li> -->
+        <li>the 7 digit reference number </li>
+        <li>an email address so we can update you about the appeal</li>
       </ul>
 
       {{ govukButton({
