--- a/app/views/interested-party/v1/appeal-details.html
+++ b/app/views/interested-party/v1/appeal-details.html
@@ -6,8 +6,8 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% if data['reference'] %}
-  {% set title = "Appeal "+data['reference'] %}
+{% if data['appeal-code'] %}
+  {% set title = "Appeal "+data['appeal-code'] %}
 {% else %}
   {% set title = "Appeal number 1234567" %}
 {% endif %}
@@ -39,6 +39,28 @@
       <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
+
+      <!-- show if 'alt' has any value -->
+      {% if data['alt'] %}
+
+        <!-- alt shows nothing here -->
+
+      {% else %}
+
+        {% if data['status'] == "open" %}
+
+          <p class="govuk-body">
+            You can comment on this appeal until 11:59pm on 4 May 2022.
+          </p>
+
+
+        {% else %}
+          <p class="govuk-body">
+            This appeal is closed. You cannot add comments.
+          </p>
+        {% endif %}
+
+      {% endif %}
 
       <h2 class="govuk-heading-m">
         Appeal details
@@ -150,24 +172,36 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-      {% if data['status'] == "open" %}
-        <h2 class="govuk-heading-m">
-          You can comment on this appeal until 11:59pm on 4 May 2022
-        </h2>
+      <!-- show if 'alt' has any value -->
+      {% if data['alt'] %}
 
-        <p class="govuk-body">
-          <a href="appeal-comment-name?checking=" class="govuk-link govuk-link--no-visited-state">
-            Comment on this appeal
-          </a>
-        </p>
-      {% elif data['status'] == "closed" %}
-        <p class="govuk-body">
-          You can not add any comments now as this appeal is closed for comments.
-        </p>
+        <!-- appeal open for comments -->
+        {% if data['status'] == "open" %}
+          <h2 class="govuk-heading-m">
+            You can comment on this appeal until 11:59pm on 4 May 2022
+          </h2>
+
+          <p class="govuk-body">
+            <a href="appeal-comment-name?checking=" class="govuk-link govuk-link--no-visited-state">
+              Comment on this appeal
+            </a>
+          </p>
+
+        {% else %}
+
+          <!-- appeal closed for comments or closed -->
+          <p class="govuk-body">
+            This appeal is closed. You cannot add comments.
+          </p>
+        {% endif %}
+
       {% else %}
-        <p class="govuk-body">
-          You can not add any comments now as this appeal is closed.
-        </p>
+
+        {{ govukButton({
+          text: "Comment on this appeal",
+          href: "appeal-comment-name?checking="
+        }) }}
+
       {% endif %}
 
     </div>
