--- a/app/views/interested-party/v1/appeal-search.html
+++ b/app/views/interested-party/v1/appeal-search.html
@@ -29,7 +29,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="appeal-details" method="post">
+      <form action="appeal-details?status=open" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
 
@@ -56,7 +56,7 @@
           {% endif %}
 
           <p class="govuk-hint">
-            For example, 1234567
+            For example, 1234567 or BS1 6PN
           </p>
 
           <input class="govuk-input govuk-input--width-10" id="appeal-code-input" name="appeal-code" type="number">
