--- a/app/views/interested-party/v1/householder-appeal-first-notice.html
+++ b/app/views/interested-party/v1/householder-appeal-first-notice.html
@@ -1,11 +1,16 @@
 {% extends "layout-email.html" %}
 
 {% block pageTitle %}
-  Full appeal started email
+  Interested party full planning notification
 {% endblock %}
 
+
+Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[INSERT HERE]Application reference:[INSERT HERE]An appeal has been made against the decision of [LPD]to [insert reason for appeal, i.e. refuse to grant planning permission].[The appeal will be determined on the basis of written representations.][The appeal will be determined on the basis of a hearing.] [The appeal will be determined on the basis of an inquiry.] Interested individuals that want to take part in the Inquiry can do so by applying for Rule 6 status.Rule 6 status means that you would be able to present your evidence on a formal basis and cross examine the evidence of others.You can learn more about Rule 6 at:https://www.gov.uk/government/publications/apply-for-rule-6-status-on-a-planning-appeal-or-called-in-applicationWhat happens next** TO BE ADDED **Thank you,The Planning Inspectorate
+
+
+
 {% block content %}
-<p><strong>Subject:</strong> 9617 The Avenue, XM26 7YS – full appeal started </p>
+<p><strong>Subject:</strong> 9617 The Avenue, XM26 7YS – appeal started </p>
 <p><strong>From:</strong> appeals@planninginspectorate.gov.uk</p>
 
 <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
@@ -13,9 +18,9 @@
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
-    <p class="govuk-body">Planning appeal reference: A/1234567</p>
-    <p class="govuk-body">Dear [Name of local planning department]</p>
-    <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>21/05058/FUL</strong>.</p>
+    <!-- <p class="govuk-body">Planning appeal reference: A/1234567</p> -->
+    <p class="govuk-body">Dear Sam Phipps</p>
+    <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>A/1234567</strong>.</p>
     <p class="govuk-body">
       <strong>Appeal site:</strong><br>
       9617 The Avenue <br>
@@ -27,10 +32,9 @@
     <h2 class="govuk-heading-m">
       What you need to do
     </h2>
-    <p class="govuk-body">You need to submit your questionnaire and documents for the appeal.</p>
-    <p class="govuk-body">Your deadline is {{ 7 | daysInFuture }}.</p>
-    <p class="govuk-body">Complete the questionnaire: <a href="/lpa-questionnaire/fullv1/security/email">[View questionnaire URL]</a></p>
-    <p class="govuk-body">Once you've submitted your questionnaire, you need to email a copy to the appellant at: appellant@email.com</p>
+    <p class="govuk-body">You can submit comments for this appeal.</p>
+    <p class="govuk-body">The deadline for comments is 11.59pm on 4 May 2022.</p>
+    <p class="govuk-body">You can add comments to the appeal at <a href="guidance">https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search</a>.</p>
 
     <p class="govuk-body">
       Thank you,​<br>
