--- a/app/views/index.html
+++ b/app/views/index.html
@@ -49,34 +49,38 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/appellant-submission/v12/">Start journey from 'Before you start'</a>
+                        <a href="/appellant-submission/v12/costs-guidance/overview">Guidance - Claim planning appeal costs</a>
+                      </li><br>
+                      <li>
+                        <a href="/appellant-submission/v12/">Start from 'Before you start'</a>
                       </li>
                       <li>
                         <a href="/appellant-submission/v12/skip/full-bys-cya">Start from check your answers in 'Before you start'</a>
-                      </li>
+                      </li><br>
                       <li>
-                        <a href="/appellant-submission/v12/skip/full-task-list">Start from full appeal task list</a>
+                        <a href="/appellant-submission/v12/skip/full-task-list">Start from task list</a>
                       </li>
-                      <li>
+                      <!--li>
                         <a href="/appellant-submission/v12/skip/full-non-determinaton-task-list">Start from full appeal task list (non-determination)</a>
-                      </li>
+                      </li-->
                       <li>
-                        <a href="/appellant-submission/v12/skip/full-check-answers">Start from full appeal check your answers</a>
+                        <a href="/appellant-submission/v12/skip/full-check-answers">Start from check your answers</a>
                       </li>
                     </ul>
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (5)
+                          Jira Tickets (6)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3704">AS-3704 Standardise file size and upload fields</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3706">AS-3706 Drag and drop and multiple file uploads to be more obvious</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4053">AS-4053 Addition of procedure questions to Planning Appeal form</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4057">AS-4057 Addition of Costs question to Planning Appeal form</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4319">AS-4319 Updates to check your answers</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3704" target="_blank">AS-3704 Standardise file size and upload fields</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3706" target="_blank">AS-3706 Drag and drop and multiple file uploads to be more obvious</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4053" target="_blank">AS-4053 Addition of procedure questions to Planning Appeal form</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4057" target="_blank">AS-4057 Addition of Costs question to Planning Appeal form</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4319" target="_blank">AS-4319 Updates to check your answers</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4314" target="_blank">AS-4314 Guidance content for "Claim planning appeal costs"</a></li>
                         </ul>
                       </div>
                     </details>
@@ -115,12 +119,12 @@
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3529">AS-3529 Full Planning Agricultural Holding information</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3707">AS-3707 Site ownership questions</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3716">AS-3716 Before you start - check answers</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3722">AS-3722 Supporting documents</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3726">AS-3726 Enforcement notice question</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3730">AS-3730 Decision notice upload - don't ask if non-determination</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3529" target="_blank">AS-3529 Full Planning Agricultural Holding information</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3707" target="_blank">AS-3707 Site ownership questions</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3716" target="_blank">AS-3716 Before you start - check answers</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3722" target="_blank">AS-3722 Supporting documents</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3726" target="_blank">AS-3726 Enforcement notice question</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3730" target="_blank">AS-3730 Decision notice upload - don't ask if non-determination</a></li>
                         </ul>
                       </div>
                     </details>
@@ -204,7 +208,7 @@
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3579">AS-3579 Eligibility checker combining HAS and Full appeals (MVP)</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-3579" target="_blank">AS-3579 Eligibility checker combining HAS and Full appeals (MVP)</a></li>
                         </ul>
                       </div>
                     </details>
