--- a/app/views/statement-of-case/v1/index.html
+++ b/app/views/statement-of-case/v1/index.html
@@ -71,7 +71,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-      {% include "statement-of-case/"+version+"/_details.html" %} 
+      {% include "statement-of-case/"+version+"/_lpd-details.html" %} 
 
     </div>
   </div>
