--- a/app/views/statement-of-case/v1/confirmation.html
+++ b/app/views/statement-of-case/v1/confirmation.html
@@ -23,7 +23,7 @@
       }) }}
 
       <p class="govuk-body govuk-!-margin-top-7">
-        We've sent a confirmation email to [lpa central email].
+        We've sent a confirmation email to <a href="javascript:preventDefault();">email@localplanningdepartment.gov.uk</a>.
       </p>
 
       <h2 class="govuk-heading-m">
