--- a/app/views/interested-party/v1/guidance.html
+++ b/app/views/interested-party/v1/guidance.html
@@ -4,7 +4,7 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "Guidance for commenting on an appeal" %}
+{% set title = "Comment on a planning appeal" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -29,37 +29,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-l">{{ subServiceName }}</span>
+      <!-- <span class="govuk-caption-l">{{ subServiceName }}</span> -->
       <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
 
       <p class="govuk-body">
         You can use this service to comment on an appeal.
-      </p>
-
-      <!-- <p class="govuk-body">
-        The deadline for comments is 5 weeks after the start date of the appeal, or 6 weeks after the date on the local planning departments enforcement notice.
-      </p> -->
-
-      <!-- <p class="govuk-body">
-        The deadline for comments is 5 weeks after the start date of the appeal.
-      </p> -->
-
-      <p class="govuk-body">
-        The deadline for comments is 11.59pm 4 May 2022.
-      </p>
-
-      <!-- <p class="govuk-body">
-        Your local planning department must tell anyone who has commented on the original application (‘interested parties’) that there is an appeal.
-      </p>
-
-      <p class="govuk-body">
-        They have to do this within 5 working days of the appeal being started by the Planning Inspectorate.
-      </p> -->
-
-      <p class="govuk-body">
-        You can read <a href="https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal" class="govuk-link govuk-link--no-visited-state">the detailed guidance about taking part in an appeal</a>.
       </p>
 
       <h2 class="govuk-heading-m">
@@ -72,8 +48,9 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <!-- <li>the appeal reference number</li> -->
-        <li>the 7 digit reference number </li>
+        <li>the 7 digit appeal reference number </li>
         <li>an email address so we can update you about the appeal</li>
+        <li>your comments saved in a document</li>
       </ul>
 
       {{ govukButton({
