--- a/app/views/interested-party/v1/householder-appeal-first-notice.html
+++ b/app/views/interested-party/v1/householder-appeal-first-notice.html
@@ -11,35 +11,53 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
 {% block content %}
 <p><strong>Subject:</strong> 9617 The Avenue, XM26 7YS – appeal started </p>
-<p><strong>From:</strong> appeals@planninginspectorate.gov.uk</p>
+<p><strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk</p>
 
-<img src="{{ asset_path }}images/pi-logo.png" width="150"/>
+<!-- <img src="{{ asset_path }}images/pi-logo.png" width="150"/> -->
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
     <!-- <p class="govuk-body">Planning appeal reference: A/1234567</p> -->
-    <p class="govuk-body">Dear Sam Phipps</p>
-    <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>A/1234567</strong>.</p>
+    <p class="govuk-body">Dear Sam Phipps,</p>
+    <!-- <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>A/10112454</strong>.</p> -->
+
+    <p class="govuk-body">J. M. Wigstone is appealling our decision to refuse planning application <strong>A/10112454</strong>.</p>
+
+    <!-- <p class="govuk-body">
+      <strong>Applicant name:</strong><br>
+      J. M. Wigstone
+    </p> -->
+
     <p class="govuk-body">
       <strong>Appeal site:</strong><br>
       9617 The Avenue <br>
       Maidstone<br>
       XM26 7YS
     </p>
-    <p class="govuk-body">This will be decided by written representations.</p>
+
+    <p class="govuk-body">
+      <strong>Appeal reference:</strong><br>
+      1234567
+    </p>
+
+    <!-- <p class="govuk-body">This will be decided by written representations.</p> -->
 
     <h2 class="govuk-heading-m">
-      What you need to do
+      What you can do
     </h2>
-    <p class="govuk-body">You can submit comments for this appeal.</p>
-    <p class="govuk-body">The deadline for comments is 11.59pm on 4 May 2022.</p>
-    <p class="govuk-body">You can add comments to the appeal at <a href="guidance">https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search</a>.</p>
+
+    <p class="govuk-body">You can comment on the appeal until 11.59pm on 4 May 2022.</p>
+
+    <p class="govuk-body">Submit your comments to the Planning Inspectorate at <a href="guidance">https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search</a>.</p>
+
+    <!-- <a href="javascript:preventDefault();">caseofficers@planninginspectorate.gov.uk</a> -->
 
     <p class="govuk-body">
       Thank you,​<br>
-      The Planning Inspectorate​<br>
-      <a href="javascript:preventDefault();">CaseOfficers@PlanningInspectorate.gov.uk</a>
+      Bristol City Council Planning Department<br>
+      <!-- <a href="javascript:preventDefault();">CaseOfficers@PlanningInspectorate.gov.uk</a> -->
+      <!-- <a href="javascript:preventDefault();">caseofficers@planninginspectorate.gov.uk</a> -->
     </p>
 
   </div>
