Removal of "Request more time" on shutter pages

--- a/app/views/statement-of-case/v1/shutter/deadline-passed.html
+++ b/app/views/statement-of-case/v1/shutter/deadline-passed.html
@@ -26,12 +26,12 @@
         Your deadline to submit a statement of case for appeal F/1234567 was Monday 3 January 2022.
       </p>
 
-      <h2 class="govuk-heading-m">Request more time</h2>
+      <!--h2 class="govuk-heading-m">Request more time</h2>
       <p class="govuk-body">To request more time, email the case officer:</p>
       <p class="govuk-body">
         <strong>Chris Smith</strong><br>
         Email: <a href="javascript:preventDefault();">caseteamemail@email.com</a>
-      </p>
+      </p-->
 
     </div>
   </div>
