Added start email to include link to statement of case

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -877,6 +877,9 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
+                        <a href="/start-email/v3/started-refusal" title="">Start email including statement of case link</a>
+                      </li>
+                      <li>
                         <a href="/statement-of-case/v1/" title="">Upload statement of case comments</a>
                       </li>
                     </ul>
