Comment on appeal content and design updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -241,11 +241,11 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                   <li>
+                    <a href="/interested-party/v1/householder-appeal-first-notice-letter" class="govuk-link--no-visited-state">Householder appeal first notice (letter)</a>
+                  </li>
+                  <li>
                     <a href="/interested-party/v1/householder-appeal-first-notice" class="govuk-link--no-visited-state">Householder appeal first notice (email)</a>
                   </li>
-                  <!-- <li>
-                    <a href="/interested-party/v1/full-planning-appeal-first-notice" class="govuk-link--no-visited-state">Full Planning appeal first notice (email)</a>
-                  </li> -->
 
                   <br>
                   <li>
