--- a/app/views/interested-party/v1/appeal-comment-email.html
+++ b/app/views/interested-party/v1/appeal-comment-email.html
@@ -4,7 +4,7 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "What is your email address?" %}
+{% set title = "What’s your email address?" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -45,7 +45,7 @@
           </label>
 
           <p class="govuk-body">
-            We will contact you if we need to discuss your comments.
+            We’ll contact you if we need to discuss your comments.
           </p>
 
           <div class="govuk-form-group">
