--- a/app/views/interested-party/v1/appeal-comment-name.html
+++ b/app/views/interested-party/v1/appeal-comment-name.html
@@ -4,7 +4,7 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "What is your full name?" %}
+{% set title = "What’s your full name?" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -45,7 +45,7 @@
           </label>
 
           <p class="govuk-body">
-            We need to know who is commenting on the appeal.
+            We need to know who’s commenting on the appeal.
           </p>
 
           <div class="govuk-form-group">
