--- a/app/views/interested-party/v1/guidance.html
+++ b/app/views/interested-party/v1/guidance.html
@@ -53,6 +53,88 @@
         <li>your comments saved in a document</li>
       </ul>
 
+      <h2 class="govuk-heading-m">
+        Your comments must not include:
+      </h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <!-- <li>the appeal reference number</li> -->
+        <li>inflammatory or abusive language</li>
+        <li>sensitive information</li>
+      </ul>
+
+      <details class="govuk-details" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            Check what sensitive information includes
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+
+          <p class="govuk-body">
+            Sensitive information refers to:
+          </p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <!-- <li>the appeal reference number</li> -->
+            <li>
+              comments from children
+            </li>
+            <li>
+              information relating to children
+            </li>
+            <li>
+              information relating to health
+            </li>
+            <li>
+              information relating to crime
+            </li>
+            <li>
+              any information relating to an individual’s:
+
+              <ul class="govuk-list govuk-list--bullet">
+                <li>
+                  comments from children
+                </li>
+                <li>
+                  race
+                </li>
+                <li>
+                  ethnic origin
+                </li>
+                <li>
+                  politics
+                </li>
+                <li>
+                  religion
+                </li>
+                <li>
+                  trade union membership
+                </li>
+                <li>
+                  genetics
+                </li>
+                <li>
+                  physical characteristics
+                </li>
+                <li>
+                  sex
+                </li>
+                <li>
+                  lifesexual
+                </li>
+                <li>
+                  orientation
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+
+        </div>
+      </details>
+
+
       {{ govukButton({
         classes: "govuk-!-margin-top-5",
         href: "appeal-search",
