--- a/app/views/interested-party/v1/householder-appeal-first-notice-letter.html
+++ b/app/views/interested-party/v1/householder-appeal-first-notice-letter.html
@@ -10,12 +10,22 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
 
 {% block content %}
-<p><strong>Subject:</strong> 9617 The Avenue, XM26 7YS – appeal started </p>
-<p><strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk</p>
+
+<p>
+  Bristol City Council Planning Department, Atlas Buildings<br>
+  Sedgemore Road, Bristol BS1 6XN
+</p>
+
+<p>
+  <strong>Sam Phipps</strong><br>
+  Atlas Buildings<br>
+  Sedgemore Road<br>
+  Bristol<br>
+  BS1 6XN
+</p>
+
 
 <!-- <img src="{{ asset_path }}images/pi-logo.png" width="150"/> -->
-
-<hr>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
@@ -51,14 +61,11 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
     <p class="govuk-body">You can comment on the appeal until 11.59pm on 4 May 2022.</p>
 
-    <p class="govuk-body">Submit your comments to the Planning Inspectorate at <a href="guidance">https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search</a>.</p>
-
-    <!-- <a href="javascript:preventDefault();">caseofficers@planninginspectorate.gov.uk</a> -->
+    <p class="govuk-body">Submit your comments to the Planning Inspectorate at <strong>https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search</strong></p>
 
     <p class="govuk-body">
       Thank you,​<br>
       Bristol City Council Planning Department<br>
-      <!-- <a href="javascript:preventDefault();">CaseOfficers@PlanningInspectorate.gov.uk</a> -->
       <!-- <a href="javascript:preventDefault();">caseofficers@planninginspectorate.gov.uk</a> -->
     </p>
 
