Index update for interested parties

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -234,11 +234,11 @@
 
                 {{ govukTag({
                   classes: "govuk-tag--green govuk-!-margin-bottom-1",
-                  text: "Ready for research"
+                  text: "Ready for UR"
                 }) }}
 
                 <h3 class="govuk-heading-m">
-                  Interested party journey from email notice
+                  Interested party journey from LPD notice
                 </h3>
 
                 <ul class="govuk-list govuk-list--bullet">
