--- a/app/views/appellant-submission/v12/before-you-start/check-answers.html
+++ b/app/views/appellant-submission/v12/before-you-start/check-answers.html
@@ -196,7 +196,7 @@
             </div>
           {% endif %}
           
-          <div class="govuk-summary-list__row">
+          <!--div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Claiming costs
             </dt>
@@ -225,6 +225,7 @@
               </dd>
             </div>
           {% endif %}
+          -->
         </dl>
 
         <h2 class="govuk-heading-m">
