Small address change for research to make the demo make more sense

--- a/app/views/interested-party/v1/appeal-details.html
+++ b/app/views/interested-party/v1/appeal-details.html
@@ -150,9 +150,9 @@
           </dt>
           <dd class="govuk-summary-list__value">
             <p>
-              9617 The Avenue <br>
-              Maidstone <br>
-              XM26 7YS
+              22 Avenue Grove<br>
+              Somerset<br>
+              BS72 7YS
             </p>
           </dd>
         </div>
