Matching addresses in the letter

--- a/app/views/interested-party/v1/householder-appeal-first-notice.html
+++ b/app/views/interested-party/v1/householder-appeal-first-notice.html
@@ -33,9 +33,9 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
     <p class="govuk-body">
       <strong>Appeal site:</strong><br>
-      9617 The Avenue <br>
-      Maidstone<br>
-      XM26 7YS
+      22 Avenue Grove<br>
+      Somerset<br>
+      BS72 7YS
     </p>
 
     <p class="govuk-body">
