--- a/app/views/interested-party/v1/guidance.html
+++ b/app/views/interested-party/v1/guidance.html
@@ -118,13 +118,10 @@
                   physical characteristics
                 </li>
                 <li>
-                  sex
+                  sex life
                 </li>
                 <li>
-                  lifesexual
-                </li>
-                <li>
-                  orientation
+                  sexual orientation
                 </li>
               </ul>
             </li>
