--- a/app/views/index.html
+++ b/app/views/index.html
@@ -228,6 +228,119 @@
                 </span>
               </h2>
             </div>
+
+            <div id="accordion-default-content-interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
+
+              <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                {{ govukTag({
+                  classes: "govuk-tag--red govuk-!-margin-bottom-1",
+                  text: "WIP"
+                }) }}
+
+                <span class="govuk-caption-m">Sprint Barbados</span>
+                <h3 class="govuk-heading-m">
+                  Interested party journey from LPD notice (version 2)
+                </h3>
+
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>
+                    <a href="/interested-party/v2/householder-appeal-first-notice-letter" class="govuk-link--no-visited-state">Householder appeal first notice (letter)</a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/householder-appeal-first-notice" class="govuk-link--no-visited-state">Householder appeal first notice (email)</a>
+                  </li>
+
+                  <br>
+                  <li>
+                    <a href="/interested-party/v1/guidance" class="govuk-link--no-visited-state">
+                      Guidance for commenting on an appeal
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-search" class="govuk-link--no-visited-state">
+                      Search for an appeal
+                    </a>
+                  </li>
+
+                  <!-- <li>
+                    <a href="/interested-party/v2/appeal-search-results">
+                      Appeal results
+                    </a>
+                  </li> -->
+                  <li>
+                    <a href="/interested-party/v2/appeal-search-no-results" class="govuk-link--no-visited-state">
+                      No results
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-details?status=open" class="govuk-link--no-visited-state">
+                      Appeal open for comments
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-details?status=closed" class="govuk-link--no-visited-state">
+                      Appeal closed for comments
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-details?status=completed" class="govuk-link--no-visited-state">
+                      Appeal closed
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-comment-name?checking=" class="govuk-link--no-visited-state">
+                      Your full name
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/appeal-comment-email?checking=" class="govuk-link--no-visited-state">Your email address</a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/comment-upload" class="govuk-link--no-visited-state">Upload comment</a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/check-answers" class="govuk-link--no-visited-state">Check your answers</a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v2/comment-received" class="govuk-link--no-visited-state">Confirmation</a>
+                  </li>
+                  <li>
+                    <!-- <a href="/interested-party/v2/appeal-ip-comment-added-notify">Notify message about comment</a> -->
+                    Notify message about comment
+                  </li>
+
+                </ul>
+
+                <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                  <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                      Jira Tickets (6)
+                    </span>
+                  </summary>
+                  <div class="govuk-details__text">
+                    <h4 class="govuk-heading-s">
+                      Content tickets
+                    </h4>
+                    <ul class="govuk-list govuk-list-bulleted govuk-!-margin-bottom-3">
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4209" target="_blank">AS-4209 - Householder appeal notification letter (LPD template)</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4215" target="_blank">AS-4215 - Full Planning appeal notification letter (LPD template)</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4214" target="_blank">AS-4214 - Submission confirmation email (Gov Notify)</a></li>
+                    </ul>
+                    <h4 class="govuk-heading-s">
+                      Design tickets
+                    </h4>
+                    <ul class="govuk-list govuk-list-bulleted">
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4210" target="_blank">AS-4210 - Search for an appeal</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4211" target="_blank">AS-4211 - View appeal details</a></li>
+                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4213" target="_blank">AS-4213 - Submit representation</a></li>
+                    </ul>
+                  </div>
+                </details>
+              </div>
+
+            </div>
+
             <div id="accordion-default-content-interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
 
               <div class="govuk-inset-text govuk-!-margin-top-0">
@@ -237,8 +350,9 @@
                   text: "Ready for UR"
                 }) }}
 
+                <span class="govuk-caption-m">Sprint Austria</span>
                 <h3 class="govuk-heading-m">
-                  Interested party journey from LPD notice
+                  Interested party journey from LPD notice (version 1)
                 </h3>
 
                 <ul class="govuk-list govuk-list--bullet">
@@ -339,6 +453,7 @@
               </div>
 
             </div>
+
           </div>
 
           <div class="govuk-accordion__section">
