Interested parties, address search, update to appeal details screen

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -238,7 +238,7 @@
                   text: "WIP"
                 }) }}
 
-                <span class="govuk-caption-m">Sprint Barbados</span>
+                <span class="govuk-caption-m">Sprint Belgium</span>
                 <h3 class="govuk-heading-m">
                   Interested party journey from LPD notice (version 2)
                 </h3>
@@ -341,7 +341,7 @@
 
             </div>
 
-            <div id="accordion-default-content-interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
+            <div id="interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
 
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
